<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ClemLaf\'s ComptesAnd</string>
    <string name="add_act_name">Ajouter une entrée</string>
    <string name="my_sync_button_text">Synchronisation</string>
    <string name="my_tolist_button_text">Consultation</string>
    <string name="my_add_button_text">Ajouter entrée</string>
    <string name="my_showprev_button_text">Afficher précédents</string>
    <string name="my_shownext_button_text">Afficher suivants</string>
    <string name="my_showsync_button_text">Afficher synchronisés</string>
    <string name="my_showunsync_button_text">Afficher non synchronisés</string>
    <string name="my_unsync_list_title">Liste des entrées pas encore synchronisées</string>
    <string name="my_sync_list_title">Liste des entrées déjà synchronisées</string>
    <string name="my_unsync_tab_title">En attente</string>
    <string name="my_sync_tab_title">Synchronisées</string>
    <string name="my_date_txtent_text">Date</string>
    <string name="my_today_button_text">Auj.</string>
    <string name="my_cps_spin_text">Compte source</string>
    <string name="my_cpd_spin_text">Compte destination</string>
    <string name="my_moy_spin_text">Moyen</string>
    <string name="my_cat_spin_text">Catégorie</string>
    <string name="my_comm_txtent_text">Commentaire</string>
    <string name="my_prix_txtent_text">Prix</string>
    <string name="my_send_button_text">Enregistrer</string>
    <string name="my_delete_button_text">Supprimer</string>
    <string name="my_dupe_button_text">Dupliquer</string>
    <string name="my_go_button_text">ok</string>
    <string name="my_username_txtent_text">login</string>
    <string name="my_password_txtent_text">mot de passe</string>
    <string name="my_saved_toast_text">Entrée sauvegardée</string>
    <string name="my_synced_toast_text">Paramètres synchronisés</string>
    <string name="my_deleted_toast_text">Entrée supprimée</string>
    <string name="my_errj_toast_text">Erreur JSON</string>
    <string name="my_errc_toast_text">Erreur Connection</string>
    <string name="my_errnoc_toast_text">Pas de connection !</string>
    <string name="my_errnohn_toast_text">Le site des comptes n\'est pas défini, voir les options</string>
    <string name="my_pref_hostname">org.clemlaf.comptesand.HOSTNAME</string>
    <string name="my_pref_file_key">org.clemlaf.comptesand.PREFERENCES</string>
    <string name="my_update_address">/update</string>
    <string name="my_param_address">/param/list</string>
    <string name="my_pref_nothome">org.clemlaf.comptesand.NOTHOME</string>
    <string name="my_pref_nothome_title">Suis-je à l\'extérieur ?</string>
    <string name="my_pref_nothome_sum">Cocher la case pour utiliser l\'adresse sur le réseau externe</string>
    <string name="my_pref_passauth">org.clemlaf.comptesand.PASSAUTH</string>
    <string name="my_pref_passauth_title">Authentification par mot de passe ?</string>
    <string name="my_pref_passauth_sum">Cocher la case pour utiliser activer l\'authentification par mot de passe externe</string>
    <string name="my_pref_home_hostname">org.clemlaf.comptesand.HOME_HOSTNAME</string>
    <string name="my_pref_home_hn_title">Adresse site comptes à la maison</string>
    <string name="my_pref_home_hn_sum">Adresse à laquelle se connecter pour la synchronisation sur le réseau local</string>
    <string name="my_pref_out_hostname">org.clemlaf.comptesand.OUT_HOSTNAME</string>
    <string name="my_pref_out_hn_title">Adresse site comptes à l\'extérieur</string>
    <string name="my_pref_out_hn_sum">Adresse à laquelle se connecter pour la synchronisation sur le réseau externe</string>
    <string name="my_pref_crt_path">org.clemlaf.comptesand.CRT_PATH</string>
    <string name="my_pref_crt_path_title">Chemin vers le certificat SSL</string>
    <string name="my_pref_nbpage">org.clemlaf.comptesand.NB_PAGE</string>
    <string name="my_pref_nbpage_title">Nombre d\'enregistrements par page</string>
    <string name="my_settings_title">Options</string>
    <string name="my_not_title">ComptesAnd - Sync</string>
    <string name="my_not_text">Synchronisation en cours</string>
</resources>
