<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="@string/my_pref_nothome"
        android:title="@string/my_pref_nothome_title"
        android:summary="@string/my_pref_nothome_sum"
        android:defaultValue="false" />
    <EditTextPreference
        android:key="@string/my_pref_home_hostname"
        android:title="@string/my_pref_home_hn_title"
        android:summary="@string/my_pref_home_hn_sum"
        />
    <EditTextPreference
        android:key="@string/my_pref_out_hostname"
        android:title="@string/my_pref_out_hn_title"
        android:summary="@string/my_pref_out_hn_sum"
        />
    <!-- to add nubmer Preference for the number of synced item by page.-->
</PreferenceScreen>
