<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/my_date_txtent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/my_date_txtent_text"
            android:onClick="showDate"
            />
        <Spinner
            android:id="@+id/my_cps_spin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_cps_spin_text"
            />
        <Spinner
            android:id="@+id/my_cpd_spin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_cpd_spin_text"
            />
        <Spinner
            android:id="@+id/my_moy_spin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_moy_spin_text"
            />
        <Spinner
            android:id="@+id/my_cat_spin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_cat_spin_text"
            />
        <EditText
            android:id="@+id/my_comm_txtent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/my_comm_txtent_text"
            android:inputType="text"
            />
        <EditText
            android:id="@+id/my_prix_txtent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/my_prix_txtent_text"
            android:inputType="numberDecimal|numberSigned"
            />
        <Button  
            android:id="@+id/my_send_button"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:text="@string/my_send_button_text"
            android:onClick="sendForm"
            />
    </LinearLayout>
</ScrollView>
